Update index.html and script.js

--- a/index.html
+++ b/index.html
@@ -21,22 +21,6 @@
                         <i class="fas fa-code"></i> Software Engineer
                     </button>
                     <div class="template-edit" style="display: none;">
-                        <div class="template-help">
-                            <h4><i class="fas fa-info-circle"></i> Template Variables</h4>
-                            <ul>
-                                <li><code>{personName}</code> - Will be replaced with the recipient's name</li>
-                                <li><code>{companyName}</code> - Will be replaced with the company name</li>
-                            </ul>
-                            <h4><i class="fas fa-user"></i> Personal Information</h4>
-                            <p>Your personal details will be automatically added at the end of the message. No need to include them in the template.</p>
-                            <h4><i class="fas fa-lightbulb"></i> Tips</h4>
-                            <ul>
-                                <li>Keep the message professional and concise</li>
-                                <li>Use the variables to personalize the message</li>
-                                <li>Don't include your contact details - they'll be added automatically</li>
-                                <li>Maintain proper spacing and formatting</li>
-                            </ul>
-                        </div>
                         <textarea class="template-content"></textarea>
                         <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
                     </div>
@@ -46,22 +30,6 @@
                         <i class="fas fa-laptop-code"></i> Senior Software Engineer
                     </button>
                     <div class="template-edit" style="display: none;">
-                        <div class="template-help">
-                            <h4><i class="fas fa-info-circle"></i> Template Variables</h4>
-                            <ul>
-                                <li><code>{personName}</code> - Will be replaced with the recipient's name</li>
-                                <li><code>{companyName}</code> - Will be replaced with the company name</li>
-                            </ul>
-                            <h4><i class="fas fa-user"></i> Personal Information</h4>
-                            <p>Your personal details will be automatically added at the end of the message. No need to include them in the template.</p>
-                            <h4><i class="fas fa-lightbulb"></i> Tips</h4>
-                            <ul>
-                                <li>Keep the message professional and concise</li>
-                                <li>Use the variables to personalize the message</li>
-                                <li>Don't include your contact details - they'll be added automatically</li>
-                                <li>Maintain proper spacing and formatting</li>
-                            </ul>
-                        </div>
                         <textarea class="template-content"></textarea>
                         <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
                     </div>
@@ -69,22 +37,6 @@
                 <div class="template-item">
                     <button class="template-btn" data-template="senior-tech-support">Senior Technical Support</button>
                     <div class="template-edit" style="display: none;">
-                        <div class="template-help">
-                            <h4>Template Variables</h4>
-                            <ul>
-                                <li><code>{personName}</code> - Will be replaced with the recipient's name</li>
-                                <li><code>{companyName}</code> - Will be replaced with the company name</li>
-                            </ul>
-                            <h4>Personal Information</h4>
-                            <p>Your personal details will be automatically added at the end of the message. No need to include them in the template.</p>
-                            <h4>Tips</h4>
-                            <ul>
-                                <li>Keep the message professional and concise</li>
-                                <li>Use the variables to personalize the message</li>
-                                <li>Don't include your contact details - they'll be added automatically</li>
-                                <li>Maintain proper spacing and formatting</li>
-                            </ul>
-                        </div>
                         <textarea class="template-content"></textarea>
                         <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
                     </div>
@@ -92,22 +44,6 @@
                 <div class="template-item">
                     <button class="template-btn" data-template="production-support">Production Support</button>
                     <div class="template-edit" style="display: none;">
-                        <div class="template-help">
-                            <h4>Template Variables</h4>
-                            <ul>
-                                <li><code>{personName}</code> - Will be replaced with the recipient's name</li>
-                                <li><code>{companyName}</code> - Will be replaced with the company name</li>
-                            </ul>
-                            <h4>Personal Information</h4>
-                            <p>Your personal details will be automatically added at the end of the message. No need to include them in the template.</p>
-                            <h4>Tips</h4>
-                            <ul>
-                                <li>Keep the message professional and concise</li>
-                                <li>Use the variables to personalize the message</li>
-                                <li>Don't include your contact details - they'll be added automatically</li>
-                                <li>Maintain proper spacing and formatting</li>
-                            </ul>
-                        </div>
                         <textarea class="template-content"></textarea>
                         <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
                     </div>
@@ -115,22 +51,24 @@
                 <div class="template-item">
                     <button class="template-btn" data-template="senior-fullstack">Senior Full Stack Developer</button>
                     <div class="template-edit" style="display: none;">
-                        <div class="template-help">
-                            <h4>Template Variables</h4>
-                            <ul>
-                                <li><code>{personName}</code> - Will be replaced with the recipient's name</li>
-                                <li><code>{companyName}</code> - Will be replaced with the company name</li>
-                            </ul>
-                            <h4>Personal Information</h4>
-                            <p>Your personal details will be automatically added at the end of the message. No need to include them in the template.</p>
-                            <h4>Tips</h4>
-                            <ul>
-                                <li>Keep the message professional and concise</li>
-                                <li>Use the variables to personalize the message</li>
-                                <li>Don't include your contact details - they'll be added automatically</li>
-                                <li>Maintain proper spacing and formatting</li>
-                            </ul>
-                        </div>
+                        <textarea class="template-content"></textarea>
+                        <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
+                    </div>
+                </div>
+                <div class="template-item">
+                    <button class="template-btn" data-template="python-developer">
+                        <i class="fab fa-python"></i> Python Developer
+                    </button>
+                    <div class="template-edit" style="display: none;">
+                        <textarea class="template-content"></textarea>
+                        <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
+                    </div>
+                </div>
+                <div class="template-item">
+                    <button class="template-btn" data-template="react-developer">
+                        <i class="fab fa-react"></i> React Developer
+                    </button>
+                    <div class="template-edit" style="display: none;">
                         <textarea class="template-content"></textarea>
                         <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
                     </div>
@@ -138,22 +76,6 @@
                 <div class="template-item">
                     <button class="template-btn" data-template="work-visa">Work Visa Response</button>
                     <div class="template-edit" style="display: none;">
-                        <div class="template-help">
-                            <h4>Template Variables</h4>
-                            <ul>
-                                <li><code>{personName}</code> - Will be replaced with the recipient's name</li>
-                                <li><code>{companyName}</code> - Will be replaced with the company name</li>
-                            </ul>
-                            <h4>Personal Information</h4>
-                            <p>Your personal details will be automatically added at the end of the message. No need to include them in the template.</p>
-                            <h4>Tips</h4>
-                            <ul>
-                                <li>Keep the message professional and concise</li>
-                                <li>Use the variables to personalize the message</li>
-                                <li>Don't include your contact details - they'll be added automatically</li>
-                                <li>Maintain proper spacing and formatting</li>
-                            </ul>
-                        </div>
                         <textarea class="template-content"></textarea>
                         <button class="save-template-btn"><i class="fas fa-save"></i> Save</button>
                     </div>
@@ -215,6 +137,10 @@
                 <div class="input-group">
                     <label for="person-name"><i class="fas fa-user"></i> Person Name</label>
                     <input type="text" id="person-name" placeholder="Enter Person Name">
+                </div>
+                <div class="input-group">
+                    <label for="job-role"><i class="fas fa-briefcase"></i> Job Role</label>
+                    <input type="text" id="job-role" placeholder="Enter Job Role (optional)">
                 </div>
             </div>
             <div class="message-section">
